feat. NamePipe, Service 연결 상태를 WPF에서 주기적으로 관찰하도록 변경. (+ 기존 실행 프로그램이 존재하는 경우 윈도우 메시지를 띄우도록 추가)

--- a/S1FileSync/Views/SyncMonitorView.xaml
+++ b/S1FileSync/Views/SyncMonitorView.xaml
@@ -67,18 +67,26 @@
         <Border DockPanel.Dock="Bottom"
                 Margin="0,16,0,0"
                 Padding="5">
-            <StackPanel Orientation="Horizontal"
-                        HorizontalAlignment="Right">
-                <Button Content="Stop Sync"
-                        Command="{Binding StopSyncCommand}"
-                        Style="{StaticResource OutlineButtonStyle}"
-                        Margin="0,0,15,0"
-                        IsEnabled="{Binding IsServiceRunning}"/>
-                <Button Content="Start Sync"
-                        Command="{Binding StartSyncCommand}"
-                        Style="{StaticResource PrimaryButtonStyle}"
-                        IsEnabled="{Binding IsServiceRunning, Converter={StaticResource InverseBoolConverter}}"/>
-            </StackPanel>
+            <DockPanel LastChildFill="False">
+                <StackPanel DockPanel.Dock="Left"
+                            Orientation="Horizontal">
+                    <Button Content="Clear List"
+                            Command="{Binding ClearItemList}"
+                            Style="{StaticResource OutlineButtonStyle}"/>
+                </StackPanel>
+                <StackPanel DockPanel.Dock="Right"
+                            Orientation="Horizontal">
+                    <Button Content="Stop Sync"
+                            Command="{Binding StopSyncCommand}"
+                            Style="{StaticResource OutlineButtonStyle}"
+                            Margin="0,0,15,0"
+                            IsEnabled="{Binding IsServiceRunning}"/>
+                    <Button Content="Start Sync"
+                            Command="{Binding StartSyncCommand}"
+                            Style="{StaticResource PrimaryButtonStyle}"
+                            IsEnabled="{Binding IsServiceStopped}"/>
+                </StackPanel>
+            </DockPanel>
         </Border>
 
         <ContentControl Content="{Binding ProgressView}">
