--- a/S1FileSync/App.xaml
+++ b/S1FileSync/App.xaml
@@ -14,6 +14,8 @@
             <converters:InverseBoolConverter x:Key="InverseBoolConverter"/>
             <BooleanToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
             <converters:InverseBoolToVisibilityConverter x:Key="InverseBoolToVisibilityConverter"/>
+            <converters:ConnectionStatusConverter x:Key="ConnectionStatusConverter"/>
+            <converters:IsConnectionStatusConverter x:Key="IsConnectionStatusConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
